Test samples against Scala 3.3 LTS and current Scala 3
Resolve symbolic Scala selectors to exact compiler versions before invoking each sample build. Use the current Play, WebJars Play, Play Ebean, Play gRPC, ScalaTest+Play, and Play Slick snapshots for the Scala 3.3 LTS and current Scala 3 lanes, and remove milestone-specific compatibility workarounds.